# fake-og

./: Cargo.toml  Dockerfile  deployment.yml
.github/workflows/: gke.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-05-19-204325_create_pages/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
static/: index.html
templates/: hello.hbs
