[package]
name = "fake-og"
version = "0.1.0"
authors = ["g-goessel <me+github@guimoz.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
yarte = "0.8"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
env_logger = "0.7"